- Fixed an issue where the hidden menu was staying opened when it was loosing the focus but has the mouse hover. - Fixed an issue that was generating a warning in the console after closing a modal with the Escape key because of a bad state in React. - Fixed an issue where the focus was not trapped in the Import modal when we closed another modal before the Project modal (for i.e : the issue was appearing after using the Language modal, and then the Projects/Import). - Fixed an issue where, in High contrast mode, the Open documentation in a new tab button was not clearly visible (yellow color on white background when the High Contrast of the system was not enabled). I changed the color and put the background to black so it's visible even if the background color of the documentation is white (when the High Contrast of the operating system is disabled). - Fixed an issue where the Open documentation in a new tab button was not working with the Space/Enter key.

--- a/theme/common.less
+++ b/theme/common.less
@@ -211,10 +211,6 @@ div.simframe > iframe {
     .ui.item.link:focus {
         top:20em;
     }
-
-    .ui.item.link:hover {
-        top:20em;
-    }
 }
 
 #menubar .ui.menu .item.editor-menuitem {
